--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="">
     
-    <link rel="preload" href="/assets/css/0.styles.e4d8b86b.css" as="style"><link rel="preload" href="/assets/js/app.f2d09dad.js" as="script"><link rel="preload" href="/assets/js/6.498ab014.js" as="script"><link rel="prefetch" href="/assets/js/2.5363a703.js"><link rel="prefetch" href="/assets/js/3.6f04835d.js"><link rel="prefetch" href="/assets/js/4.e05c873c.js"><link rel="prefetch" href="/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/assets/js/7.5a36517f.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.e4d8b86b.css">
+    <link rel="preload" href="/reactxjs-docs/assets/css/0.styles.d2c8dc13.css" as="style"><link rel="preload" href="/reactxjs-docs/assets/js/app.43b41084.js" as="script"><link rel="preload" href="/reactxjs-docs/assets/js/6.498ab014.js" as="script"><link rel="prefetch" href="/reactxjs-docs/assets/js/2.5363a703.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/3.6f04835d.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/7.5a36517f.js">
+    <link rel="stylesheet" href="/reactxjs-docs/assets/css/0.styles.d2c8dc13.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/reactxjs-docs/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.f2d09dad.js" defer></script><script src="/assets/js/6.498ab014.js" defer></script>
+    <script src="/reactxjs-docs/assets/js/app.43b41084.js" defer></script><script src="/reactxjs-docs/assets/js/6.498ab014.js" defer></script>
   </body>
 </html>
