--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="">
     
-    <link rel="preload" href="/reactxjs-docs/assets/css/0.styles.d2c8dc13.css" as="style"><link rel="preload" href="/reactxjs-docs/assets/js/app.68a73d17.js" as="script"><link rel="preload" href="/reactxjs-docs/assets/js/6.498ab014.js" as="script"><link rel="prefetch" href="/reactxjs-docs/assets/js/10.5db88b79.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/11.d34b9fd9.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/12.7954c310.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/13.95fb7e7a.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/14.45c990b0.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/2.5363a703.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/3.95796f63.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/7.3f5168c2.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/8.7743d8ac.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/9.ca4cfd8c.js">
+    <link rel="preload" href="/reactxjs-docs/assets/css/0.styles.d2c8dc13.css" as="style"><link rel="preload" href="/reactxjs-docs/assets/js/app.76f7c2ce.js" as="script"><link rel="preload" href="/reactxjs-docs/assets/js/6.498ab014.js" as="script"><link rel="prefetch" href="/reactxjs-docs/assets/js/10.f918a1f8.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/11.93333198.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/12.8367b0b5.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/13.f6fe899d.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/14.66f5097a.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/2.5363a703.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/3.95796f63.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/7.3f5168c2.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/8.cd1a16a8.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/9.2646487e.js">
     <link rel="stylesheet" href="/reactxjs-docs/assets/css/0.styles.d2c8dc13.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/reactxjs-docs/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/reactxjs-docs/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/reactxjs-docs/assets/js/app.68a73d17.js" defer></script><script src="/reactxjs-docs/assets/js/6.498ab014.js" defer></script>
+    <script src="/reactxjs-docs/assets/js/app.76f7c2ce.js" defer></script><script src="/reactxjs-docs/assets/js/6.498ab014.js" defer></script>
   </body>
 </html>
