--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="">
     
-    <link rel="preload" href="/reactxjs-docs/assets/css/0.styles.d2c8dc13.css" as="style"><link rel="preload" href="/reactxjs-docs/assets/js/app.04654755.js" as="script"><link rel="preload" href="/reactxjs-docs/assets/js/6.498ab014.js" as="script"><link rel="prefetch" href="/reactxjs-docs/assets/js/10.054b730b.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/11.181904ae.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/12.52570143.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/13.95fb7e7a.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/14.66f5097a.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/2.5363a703.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/3.95796f63.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/7.3f5168c2.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/8.cd1a16a8.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/9.b4f8722b.js">
+    <link rel="preload" href="/reactxjs-docs/assets/css/0.styles.d2c8dc13.css" as="style"><link rel="preload" href="/reactxjs-docs/assets/js/app.81533071.js" as="script"><link rel="preload" href="/reactxjs-docs/assets/js/6.498ab014.js" as="script"><link rel="prefetch" href="/reactxjs-docs/assets/js/10.096c0eb3.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/11.6e09ce19.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/12.2ed536a3.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/13.bc6c6921.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/14.38677cc2.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/15.f0acc9a8.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/2.5363a703.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/3.6529368c.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/7.3f5168c2.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/8.cd1a16a8.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/9.63ba2eec.js">
     <link rel="stylesheet" href="/reactxjs-docs/assets/css/0.styles.d2c8dc13.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/reactxjs-docs/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/reactxjs-docs/assets/js/app.04654755.js" defer></script><script src="/reactxjs-docs/assets/js/6.498ab014.js" defer></script>
+    <script src="/reactxjs-docs/assets/js/app.81533071.js" defer></script><script src="/reactxjs-docs/assets/js/6.498ab014.js" defer></script>
   </body>
 </html>
