--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="">
     
-    <link rel="preload" href="/reactxjs-docs/assets/css/0.styles.d2c8dc13.css" as="style"><link rel="preload" href="/reactxjs-docs/assets/js/app.a1509e80.js" as="script"><link rel="preload" href="/reactxjs-docs/assets/js/2.5363a703.js" as="script"><link rel="preload" href="/reactxjs-docs/assets/js/7.3f5168c2.js" as="script"><link rel="prefetch" href="/reactxjs-docs/assets/js/10.096c0eb3.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/11.6e09ce19.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/12.2ed536a3.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/13.aff32ec3.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/14.38677cc2.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/15.f0acc9a8.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/3.6529368c.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/6.498ab014.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/8.cd1a16a8.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/9.63ba2eec.js">
+    <link rel="preload" href="/reactxjs-docs/assets/css/0.styles.d2c8dc13.css" as="style"><link rel="preload" href="/reactxjs-docs/assets/js/app.e864cb74.js" as="script"><link rel="preload" href="/reactxjs-docs/assets/js/2.5363a703.js" as="script"><link rel="preload" href="/reactxjs-docs/assets/js/7.3f5168c2.js" as="script"><link rel="prefetch" href="/reactxjs-docs/assets/js/10.096c0eb3.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/11.6e09ce19.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/12.2ed536a3.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/13.aff32ec3.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/14.0c87af3e.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/15.a2c5975d.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/16.0703a14f.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/3.5e04ea21.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/6.498ab014.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/8.cd1a16a8.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/9.63ba2eec.js">
     <link rel="stylesheet" href="/reactxjs-docs/assets/css/0.styles.d2c8dc13.css">
   </head>
   <body>
@@ -33,6 +33,6 @@
 </a></p></header> <!----> <div class="theme-default-content custom content__default"></div> <div class="footer">
     MIT License | Copyright (c) 2021 Samuel Carnell
   </div></main></div><div class="global-ui"></div></div>
-    <script src="/reactxjs-docs/assets/js/app.a1509e80.js" defer></script><script src="/reactxjs-docs/assets/js/2.5363a703.js" defer></script><script src="/reactxjs-docs/assets/js/7.3f5168c2.js" defer></script>
+    <script src="/reactxjs-docs/assets/js/app.e864cb74.js" defer></script><script src="/reactxjs-docs/assets/js/2.5363a703.js" defer></script><script src="/reactxjs-docs/assets/js/7.3f5168c2.js" defer></script>
   </body>
 </html>
