--- a/guide/installation.html
+++ b/guide/installation.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="">
     
-    <link rel="preload" href="/reactxjs-docs/assets/css/0.styles.d2c8dc13.css" as="style"><link rel="preload" href="/reactxjs-docs/assets/js/app.8ac20722.js" as="script"><link rel="preload" href="/reactxjs-docs/assets/js/2.5363a703.js" as="script"><link rel="preload" href="/reactxjs-docs/assets/js/16.0703a14f.js" as="script"><link rel="prefetch" href="/reactxjs-docs/assets/js/10.d46c73e5.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/11.d7c029d0.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/12.2ed536a3.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/13.ec842782.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/14.0c87af3e.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/15.a2c5975d.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/3.5e04ea21.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/6.498ab014.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/7.3f5168c2.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/8.2a87f58f.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/9.df84b131.js">
+    <link rel="preload" href="/reactxjs-docs/assets/css/0.styles.d2c8dc13.css" as="style"><link rel="preload" href="/reactxjs-docs/assets/js/app.0f5b4a67.js" as="script"><link rel="preload" href="/reactxjs-docs/assets/js/2.5363a703.js" as="script"><link rel="preload" href="/reactxjs-docs/assets/js/17.7e1d5b62.js" as="script"><link rel="prefetch" href="/reactxjs-docs/assets/js/10.1ae66662.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/11.14e4243e.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/12.b7bc587c.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/13.77d166dd.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/14.2b94e7c5.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/15.b9777e0c.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/16.66441eed.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/3.ff26ccfb.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/6.498ab014.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/7.3f5168c2.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/8.cd1a16a8.js"><link rel="prefetch" href="/reactxjs-docs/assets/js/9.162f934b.js">
     <link rel="stylesheet" href="/reactxjs-docs/assets/css/0.styles.d2c8dc13.css">
   </head>
   <body>
@@ -31,6 +31,6 @@
       </a>
       →
     </span></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/reactxjs-docs/assets/js/app.8ac20722.js" defer></script><script src="/reactxjs-docs/assets/js/2.5363a703.js" defer></script><script src="/reactxjs-docs/assets/js/16.0703a14f.js" defer></script>
+    <script src="/reactxjs-docs/assets/js/app.0f5b4a67.js" defer></script><script src="/reactxjs-docs/assets/js/2.5363a703.js" defer></script><script src="/reactxjs-docs/assets/js/17.7e1d5b62.js" defer></script>
   </body>
 </html>
