--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="">
     
-    <link rel="preload" href="/react-with-rxjs-docs/assets/css/0.styles.56d02b76.css" as="style"><link rel="preload" href="/react-with-rxjs-docs/assets/js/app.e735cd47.js" as="script"><link rel="preload" href="/react-with-rxjs-docs/assets/js/2.ae18ba25.js" as="script"><link rel="preload" href="/react-with-rxjs-docs/assets/js/7.3f5168c2.js" as="script"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/10.d49dd276.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/11.159f7475.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/12.702db4bd.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/13.533ae8b4.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/14.4789e41a.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/15.94285f8b.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/16.b8d730b6.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/3.5e04ea21.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/6.498ab014.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/8.3cc1e124.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/9.3ac7e0af.js">
+    <link rel="preload" href="/react-with-rxjs-docs/assets/css/0.styles.56d02b76.css" as="style"><link rel="preload" href="/react-with-rxjs-docs/assets/js/app.dba9b0f2.js" as="script"><link rel="preload" href="/react-with-rxjs-docs/assets/js/2.ae18ba25.js" as="script"><link rel="preload" href="/react-with-rxjs-docs/assets/js/7.3f5168c2.js" as="script"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/10.e9c4777f.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/11.d0ac1f34.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/12.1ca5777d.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/13.533ae8b4.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/14.4789e41a.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/15.94285f8b.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/16.b8d730b6.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/3.5e04ea21.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/6.498ab014.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/8.3cc1e124.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/9.3ac7e0af.js">
     <link rel="stylesheet" href="/react-with-rxjs-docs/assets/css/0.styles.56d02b76.css">
   </head>
   <body>
@@ -27,12 +27,12 @@
     <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></nav>  <!----> </aside> <main aria-labelledby="main-title" class="home"><header class="hero"><!----> <h1 id="main-title">
       React with RxJS
     </h1> <p class="description">
-      A set of hooks for creating and consuming RxJS observables.
+      A set of hooks, HOCs, and components for creating and consuming RxJS observables.
     </p> <p class="action"><a href="/react-with-rxjs-docs/guide/installation.html" class="nav-link action-button">
   Get Started →
 </a></p></header> <!----> <div class="theme-default-content custom content__default"></div> <div class="footer">
     MIT License | Copyright (c) 2021 Samuel Carnell
   </div></main></div><div class="global-ui"></div></div>
-    <script src="/react-with-rxjs-docs/assets/js/app.e735cd47.js" defer></script><script src="/react-with-rxjs-docs/assets/js/2.ae18ba25.js" defer></script><script src="/react-with-rxjs-docs/assets/js/7.3f5168c2.js" defer></script>
+    <script src="/react-with-rxjs-docs/assets/js/app.dba9b0f2.js" defer></script><script src="/react-with-rxjs-docs/assets/js/2.ae18ba25.js" defer></script><script src="/react-with-rxjs-docs/assets/js/7.3f5168c2.js" defer></script>
   </body>
 </html>
