--- a/guide/installation.html
+++ b/guide/installation.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="">
     
-    <link rel="preload" href="/react-with-rxjs-docs/assets/css/0.styles.56d02b76.css" as="style"><link rel="preload" href="/react-with-rxjs-docs/assets/js/app.c98d356b.js" as="script"><link rel="preload" href="/react-with-rxjs-docs/assets/js/2.ae18ba25.js" as="script"><link rel="preload" href="/react-with-rxjs-docs/assets/js/16.e1f5a878.js" as="script"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/10.3ac6209b.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/11.159f7475.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/12.e0adea0e.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/13.50edb77c.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/14.88e822c2.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/15.49e39e42.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/3.5e04ea21.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/6.498ab014.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/7.3f5168c2.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/8.b47dc034.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/9.a896f10e.js">
+    <link rel="preload" href="/react-with-rxjs-docs/assets/css/0.styles.56d02b76.css" as="style"><link rel="preload" href="/react-with-rxjs-docs/assets/js/app.52e6024e.js" as="script"><link rel="preload" href="/react-with-rxjs-docs/assets/js/2.ae18ba25.js" as="script"><link rel="preload" href="/react-with-rxjs-docs/assets/js/18.d3f8df4a.js" as="script"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/10.758137c1.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/11.e0be15e4.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/12.67bb83d0.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/13.5422458d.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/14.efb209ec.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/15.6d8a92e8.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/16.5de2d06c.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/17.15368135.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/3.9c229156.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/6.498ab014.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/7.5d21c38b.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/8.1bdfb343.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/9.d38f9916.js">
     <link rel="stylesheet" href="/react-with-rxjs-docs/assets/css/0.styles.56d02b76.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/react-with-rxjs-docs/" class="home-link router-link-active"><!----> <span class="site-name">React with RxJS</span></a> <div class="links"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> <nav class="nav-links can-hide"><div class="nav-item"><a href="/react-with-rxjs-docs/guide/core-concepts.html" class="nav-link">
   Guide
-</a></div><div class="nav-item"><a href="/react-with-rxjs-docs/api/hooks/use-state-observable.html" class="nav-link">
+</a></div><div class="nav-item"><a href="/react-with-rxjs-docs/api/hooks/use-observable.html" class="nav-link">
   API
 </a></div><div class="nav-item"><a href="/react-with-rxjs-docs/changelog.html" class="nav-link">
   Changelog
@@ -22,7 +22,7 @@
     GitHub
     <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/react-with-rxjs-docs/guide/core-concepts.html" class="nav-link">
   Guide
-</a></div><div class="nav-item"><a href="/react-with-rxjs-docs/api/hooks/use-state-observable.html" class="nav-link">
+</a></div><div class="nav-item"><a href="/react-with-rxjs-docs/api/hooks/use-observable.html" class="nav-link">
   API
 </a></div><div class="nav-item"><a href="/react-with-rxjs-docs/changelog.html" class="nav-link">
   Changelog
@@ -35,6 +35,6 @@
       </a>
       →
     </span></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/react-with-rxjs-docs/assets/js/app.c98d356b.js" defer></script><script src="/react-with-rxjs-docs/assets/js/2.ae18ba25.js" defer></script><script src="/react-with-rxjs-docs/assets/js/16.e1f5a878.js" defer></script>
+    <script src="/react-with-rxjs-docs/assets/js/app.52e6024e.js" defer></script><script src="/react-with-rxjs-docs/assets/js/2.ae18ba25.js" defer></script><script src="/react-with-rxjs-docs/assets/js/18.d3f8df4a.js" defer></script>
   </body>
 </html>
