--- a/index.html
+++ b/index.html
@@ -8,22 +8,30 @@
     
     <meta name="description" content="">
     
-    <link rel="preload" href="/react-with-rxjs-docs/assets/css/0.styles.56d02b76.css" as="style"><link rel="preload" href="/react-with-rxjs-docs/assets/js/app.847cb00a.js" as="script"><link rel="preload" href="/react-with-rxjs-docs/assets/js/2.ae18ba25.js" as="script"><link rel="preload" href="/react-with-rxjs-docs/assets/js/8.1bdfb343.js" as="script"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/10.758137c1.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/11.e0be15e4.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/12.67bb83d0.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/13.5422458d.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/14.efb209ec.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/15.6d8a92e8.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/16.5de2d06c.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/17.15368135.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/18.d3f8df4a.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/3.9c229156.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/6.498ab014.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/7.b92b20a7.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/9.d38f9916.js">
-    <link rel="stylesheet" href="/react-with-rxjs-docs/assets/css/0.styles.56d02b76.css">
+    <link rel="preload" href="/react-with-rxjs-docs/assets/css/0.styles.24313b64.css" as="style"><link rel="preload" href="/react-with-rxjs-docs/assets/js/app.49061a40.js" as="script"><link rel="preload" href="/react-with-rxjs-docs/assets/js/2.ae18ba25.js" as="script"><link rel="preload" href="/react-with-rxjs-docs/assets/js/8.1bdfb343.js" as="script"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/10.7b2ddad1.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/11.c00bbe23.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/12.163f3eba.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/13.30deb2d2.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/14.5c4e6173.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/15.90417aa5.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/3.6529368c.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/4.e05c873c.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/5.f3e6ed41.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/6.498ab014.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/7.b92b20a7.js"><link rel="prefetch" href="/react-with-rxjs-docs/assets/js/9.cea52582.js">
+    <link rel="stylesheet" href="/react-with-rxjs-docs/assets/css/0.styles.24313b64.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/react-with-rxjs-docs/" aria-current="page" class="home-link router-link-exact-active router-link-active"><!----> <span class="site-name">React with RxJS</span></a> <div class="links"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> <nav class="nav-links can-hide"><div class="nav-item"><a href="/react-with-rxjs-docs/guide/core-concepts.html" class="nav-link">
+    <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/react-with-rxjs-docs/" aria-current="page" class="home-link router-link-exact-active router-link-active"><!----> <span class="site-name">React with RxJS</span></a> <div class="links"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> <nav class="nav-links can-hide"><div class="nav-item"><a href="/react-with-rxjs-docs/guide/motivation.html" class="nav-link">
   Guide
-</a></div><div class="nav-item"><a href="/react-with-rxjs-docs/api/hooks/use-observable.html" class="nav-link">
+</a></div><div class="nav-item"><a href="/react-with-rxjs-docs/api/bind-hook.html" class="nav-link">
   API
+</a></div><div class="nav-item"><a href="/react-with-rxjs-docs/examples/users-table.html" class="nav-link">
+  Examples
+</a></div><div class="nav-item"><a href="/react-with-rxjs-docs/upgrading-from-v1.html" class="nav-link">
+  Upgrading from v1
 </a></div><div class="nav-item"><a href="/react-with-rxjs-docs/changelog.html" class="nav-link">
   Changelog
 </a></div> <a href="https://github.com/samuel-carnell/react-with-rxjs" target="_blank" rel="noopener noreferrer" class="repo-link">
     GitHub
-    <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/react-with-rxjs-docs/guide/core-concepts.html" class="nav-link">
+    <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/react-with-rxjs-docs/guide/motivation.html" class="nav-link">
   Guide
-</a></div><div class="nav-item"><a href="/react-with-rxjs-docs/api/hooks/use-observable.html" class="nav-link">
+</a></div><div class="nav-item"><a href="/react-with-rxjs-docs/api/bind-hook.html" class="nav-link">
   API
+</a></div><div class="nav-item"><a href="/react-with-rxjs-docs/examples/users-table.html" class="nav-link">
+  Examples
+</a></div><div class="nav-item"><a href="/react-with-rxjs-docs/upgrading-from-v1.html" class="nav-link">
+  Upgrading from v1
 </a></div><div class="nav-item"><a href="/react-with-rxjs-docs/changelog.html" class="nav-link">
   Changelog
 </a></div> <a href="https://github.com/samuel-carnell/react-with-rxjs" target="_blank" rel="noopener noreferrer" class="repo-link">
@@ -31,12 +39,12 @@
     <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></nav>  <ul class="sidebar-links"><li><section class="sidebar-group depth-0"><p class="sidebar-heading open"><span>Home</span> <!----></p> <!----></section></li></ul> </aside> <main aria-labelledby="main-title" class="home"><header class="hero"><!----> <h1 id="main-title">
       React with RxJS
     </h1> <p class="description">
-      A set of hooks for creating and consuming RxJS observables.
+      A single API for binding RXJS Observables to your React components.
     </p> <p class="action"><a href="/react-with-rxjs-docs/guide/installation.html" class="nav-link action-button">
   Get Started →
 </a></p></header> <!----> <div class="theme-default-content custom content__default"></div> <div class="footer">
-    MIT License | Copyright (c) 2021 Samuel Carnell
+    MIT License | Copyright (c) 2022 Samuel Carnell
   </div></main></div><div class="global-ui"></div></div>
-    <script src="/react-with-rxjs-docs/assets/js/app.847cb00a.js" defer></script><script src="/react-with-rxjs-docs/assets/js/2.ae18ba25.js" defer></script><script src="/react-with-rxjs-docs/assets/js/8.1bdfb343.js" defer></script>
+    <script src="/react-with-rxjs-docs/assets/js/app.49061a40.js" defer></script><script src="/react-with-rxjs-docs/assets/js/2.ae18ba25.js" defer></script><script src="/react-with-rxjs-docs/assets/js/8.1bdfb343.js" defer></script>
   </body>
 </html>
